# The-Mesh

./: Action-Schema-Prompts-Library.md  Apply-JSON-Impacts-to-NetworkX-Graph.py  Arbitration.py  Carbon-Rebalance.json  Classroom-Syllabus.md  Conflict-Negotiation.py  Corp-Crisis-Scenarios.json  Crisis-Forecast.json  DB-structure-notes.md  Difficulty-Scaling.py  Emergency-Protocol.json  Emergency-Protocol.py  Ethical-Sourcing-Audit.json  JSON-Schema-Advanced-Gameplay-Actions.json  Knowledge-Exchange.py  Knowledge-Pooling.json  N8n-JSON.txt  Narrator-Prompt-Library.md  Onboarding-Documents.md  PayloadPassing.json  Phase-2-LLM-Connector.py  Protocol-Rewrite.json  README.md  Referendum-Voting.json  Resource-Bidding.py  Resource-Pooling.json  Resource-Pooling.py  Resource-Routing-Engine.py  SR-PROMPT-VERIFICATION-AT-MULTIPLE-GRAPH-LEVELS.py  System-Narrator-Prompt.md  Team-Negotiation.json  Turn-Cycle-Engine.py  Turns-ThreatDecay-NarrativeHooks.py  asset-features.py  deterministic-safe-response.js  game-Blueprint-wrapper-main-game.py  main.py  pyproject.toml
assets/: lovable_n8n_api_wrapper.py
docs/: Facilitator-Guide.md  Game-Design-Mechanics-notes.txt  The-Mesh-Quickstart-Guide.md  The-Mesh-Rulebook.md
engine/: Classroom-orchestration-loop.py  Protocol-Dynamics.py  phase_2_llm_connector.py  student_vs_corporate_overlay.py
engine/graph/: Cross-Node-Coordination-Model.py  Technical-Infrastructure-Models.py  dynamic_graph_initialization.py  node_merge.json  node_merge.py
engine/impact/: Base-Impact-Model.py  Graph-Impact=Model.py  Unified-Impact-Dispatcher.py  balance_carbon_units.py
engine/narrator/: narrator_prompts.py  narrator_validator_graph_update_pipeline.py  python_prompt_loader.py  validator_for_narrator_outputs.py
mechanics/: Knowledge-Pooling.py  PROCUREMENT-Data-DRIVERS.py  Reputation-Broadcast.py  SR-Demonstration.py  classroom_team_negotiation.py  crisis_forecast.py  evacuate.py  information_sharing..py  knowledge_pooling_mechanic.py  resource_routing_negotiation_trigger.py  rules_checklist.py  trust_pledge.py  voting.py
mesh/engine/: corporate_loop.py  crisis_loop.py
mesh/graph/: Network-Scan.json
mesh/impact/: difficulty_levels.py
mesh/mechanics/: __init__.py  base.py  ethical_sourcing_audit.py  intelligence.py  registry.py
mesh/narrator/: Lovable-Prompt-Registry.yaml
mesh/schemas/actions/: Arbitration.json  Coalition-Formation.json  Intelligence-Sprint.json  Reputation-Broadcast.json  Resource-Bidding.json  Trust-Pledge.json  holder.txt
mesh/schemas/scenarios/: University-Crisis-Scenarios.json
schemas/actions/: Knowledge-Exchange.json  Mediation.json
schemas/protocols/: N8n-schema.json  Patch-Deployment.json
tests/: conftest.py  test_engine.py  test_graph.py  test_mechanics.py  test_narrator.py
tools/: validate_schema_refs.py
